RESOLVED FIXED226262
ANGLE Metal translator pre-rotation code is unused and it asserts when used
https://bugs.webkit.org/show_bug.cgi?id=226262
Summary ANGLE Metal translator pre-rotation code is unused and it asserts when used
Kimmo Kinnunen
Reported 2021-05-26 02:42:45 PDT
ANGLE Metal translator pre-rotation code is unused and buggy It is unused and most likely not neededed. It asserts when used.
Attachments
Patch (6.77 KB, patch)
2021-05-26 02:47 PDT, Kimmo Kinnunen
no flags
Patch (7.14 KB, patch)
2021-05-26 04:18 PDT, Kimmo Kinnunen
no flags
Patch (11.04 KB, patch)
2021-05-27 03:22 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-05-26 02:47:12 PDT
EWS Watchlist
Comment 2 2021-05-26 02:48:15 PDT
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
Kimmo Kinnunen
Comment 3 2021-05-26 04:18:11 PDT
John Cunningham
Comment 4 2021-05-26 18:32:44 PDT
Comment on attachment 429746 [details] Patch The DriverUniforms struct needs updating as well to reflect these changes in ContextMtl.h, apart from that it LGTM.
Kimmo Kinnunen
Comment 5 2021-05-27 03:22:00 PDT
John Cunningham
Comment 6 2021-05-27 11:26:35 PDT
Comment on attachment 429864 [details] Patch LGTM
EWS
Comment 7 2021-06-01 01:01:51 PDT
Committed r278298 (238335@main): <https://commits.webkit.org/238335@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429864 [details].
Radar WebKit Bug Importer
Comment 8 2021-06-01 01:02:17 PDT
Note You need to log in before you can comment on or make changes to this bug.