Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/ContextMtl.h
@@ -500,7 +500,7 @@ class ContextMtl : public ContextImpl, public mtl::Context
         DIRTY_BIT_MAX,
     };
 
-    // See compiler/translator/TranslatorVulkan.cpp: AddDriverUniformsToShader()
+    // Keep this in sync with TranslatorMetalDirect.cpp: kGraphicsDriverUniformNames.
     struct DriverUniforms
     {
         float viewport[4];
@@ -522,16 +522,6 @@ class ContextMtl : public ContextImpl, public mtl::Context
 
         // We'll use x, y, z, w for near / far / diff / zscale respectively.
         float depthRange[4];
-
-        // Used to pre-rotate gl_Position for Vulkan swapchain images on Android (a mat2, which is
-        // padded to the size of two vec4's).
-        // Unused in Metal.
-        float preRotation[8] = {};
-
-        // Used to pre-rotate gl_FragCoord for Vulkan swapchain images on Android (a mat2, which is
-        // padded to the size of two vec4's).
-        // Unused in Metal.
-        float fragRotation[8] = {};
 
         uint32_t coverageMask;
 
